0.83.13
  - S3 SVGA XGA emulation BlitRect now supports
    COLOR_CMP. DirectX-based Windows 95 games are now
    able to blit in 256-color mode with a transparent
    color key value.
  - ANSI.SYS emulaion now supports the "Device Status
    Report" escape when asked through code 6 (report
    cursor position)
  - Fixed RAM mapping bugs related to MDA/CGA/Hercules
    emulation and the "allow more than 640kb" option,
    that failed to map RAM as expected, and because of
    that, easily triggered a "corrupt MCB chain" error
    message.
  - Added "compresssaveparts" config option (in the
    [dosbox] section) which when set to false will not
    compress the components in saved states. (Wengier)
  - When the current reported DOS version is less than
    7.x and the user tries to mount a LBA or FAT32 disk
    image, DOSBox-X will now show a message to ask if
    the user wants it to set the required DOS version
    automatically and proceed. (Wengier)
  - DOSBox-X will now show the folder mounted after
    mounting to a drive from the menu. (Wengier)
  - Fixed MOUNT and IMGMOUNT commands unable to mount
    directories or image files that contain non-ASCII
    characters in the code page on Windows. (Wengier)
  - Fixed the cycle information on the title bar when
    the Turbo mode is enabled. (Wengier)
  - Fixed that some games using the DOS4GW Extender
    may not work due to swap file issue. (Wengier)
  - Fixed that the clipboard copy and paste may not
    work when the current code page is 808 or 872
    and you are using Windows. (Wengier)
  - The command "MIXER /LISTMIDI" now lists the ROM
    directory/files and sound fonts for MT32, Synth
    and FluidSynth MIDI device when active. (Wengier)
  - Debugger "DOS XMS" command will only list handles
    that are allocated, or with nonzero address or
    nonzero size, to avoid showing irrelevant
    information. (joncampbell123)
  - Added LOADFIX -EMS option to allocate/free