@@ -618,9 +618,20 @@ void MEM_SetLFB(Bitu page, Bitu pages, PageHandler *handler, PageHandler *mmioha
     memory.lfb_mmio.handler=mmiohandler;
     if (mmiohandler != NULL) {
         /* FIXME: Why is this hard-coded? There's more than just S3 emulation in this code's future! */
-        memory.lfb_mmio.start_page=page+(0x01000000/4096);
-        memory.lfb_mmio.end_page=page+(0x01000000/4096)+16;
-        memory.lfb_mmio.pages=16;
+        if (svgaCard == SVGA_S3Trio && (s3Card == S3_Trio64V || s3Card == S3_Vision868)) {
+            /* 64MB BAR. According to the datasheet, this 64MB region is split into two 32MB halves,
+             * the lower half "little endian" and the upper half "big endian". Within the 32MB region,
+             * the low 16MB is video memory and the high 16MB is MMIO. */
+            memory.lfb_mmio.start_page=page+(0x01000000/4096);
+            memory.lfb_mmio.end_page=page+(0x01000000/4096)+16;
+            memory.lfb_mmio.pages=16;
+        }
+        else {
+            /* 8MB BAR, MMIO at +16MB */
+            memory.lfb_mmio.start_page=page+(0x01000000/4096);
+            memory.lfb_mmio.end_page=page+(0x01000000/4096)+16;
+            memory.lfb_mmio.pages=16;
+        }
     }
     else {
         memory.lfb_mmio.start_page=0;
