@@ -8775,6 +8775,13 @@ startfunction:
                         break;
                     case SVGA_S3Trio:
                         card = "S3 Trio SVGA";
+                        switch (s3Card) {
+                            case S3_Vision864:  card = "S3 Vision864 SVGA"; break;
+                            case S3_Vision868:  card = "S3 Vision868 SVGA"; break;
+                            case S3_Trio32:     card = "S3 Trio32 SVGA"; break;
+                            case S3_Trio64:     card = "S3 Trio64 SVGA"; break;
+                            case S3_Trio64V:    card = "S3 Trio64V+ SVGA"; break;
+                        }
                         break;
                     default:
                         card = "Standard VGA";
